@@ -1,0 +1,10 @@
+<header>Cache Manager Passwords</header>
+
+By default, Squid's cache manager web interface does not require authentication
+to access any of it's functions. This page allows you to defined one or more
+passwords that apply to some or all actions in the cache manager. <p>
+
+To specify a single password for all actions, just select <b>Passwords and actions specified below</b>, then in the <b>Password</b> column select<b>Set to</b> and enter your password in the adjacent box. Then check the <b>Use this password for all actions</b> box, and click <b>Save</b>. <p>
+
+<footer>
+
